feat: criacao de tela de planos

--- a/src/main/resources/static/views/templates/menu.html
+++ b/src/main/resources/static/views/templates/menu.html
@@ -11,8 +11,8 @@
     <nav>
         <img src="" alt="Logo">
         <div class="links">
-            <a href="#home">home</a>
-            <a href="#container">planos</a>
+            <a href="/">home</a>
+            <a href="/planos">planos</a>
             <a href="../../views/Login/login.html">perfil</a>
             <a href="../../views/Admin/admin.html">admin</a>
         </div>
