--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <script th:src="@{/js/main.js}"></script>
     <title>DRINK CITY</title>
 </head>
@@ -11,7 +14,6 @@
     <div id="menu"></div>
 </header>
 <div id="home"></div>
-<div id="plans"></div>
 <div id="footer"></div>
 
 <script th:src="@{/js/buttons.js}"></script>
