refactor: mudança na lógica de funcionamento do Maps

--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -11,10 +11,10 @@
 <h2 class="titles">Bora Roletá?</h2>
 <div id="search">
     <div class="child">
-        <button onclick="buscarPorCategoria('Adegas')">Adegas</button>
-        <button onclick="buscarPorCategoria('Pagodes')">Pagodes</button>
-        <button onclick="buscarPorCategoria('Barzinhos')">Barzinhos</button>
-        <button onclick="buscarPorCategoria('Eventos')">Eventos</button>
+        <button onclick="buscarAdegas()">Adegas</button>
+        <button onclick="buscarPagodes()">Pagodes</button>
+        <button onclick="buscarBarzinhos()">Barzinhos</button>
+        <button onclick="buscarEventos()">Eventos</button>
         <button class="limpar" onclick="limparResultados()">Limpar</button>
     </div>
 </div>
