--- a/src/main/resources/templates/planos.html
+++ b/src/main/resources/templates/planos.html
@@ -88,7 +88,20 @@
 <script>
 fetch("/views/templates/menu.html")
     .then(response => response.text())
-    .then(data => document.getElementById("menu").innerHTML = data);
+    .then(data => {
+        document.getElementById("menu").innerHTML = data;
+        
+        // Carregar e inicializar o sistema de autenticação
+        const authScript = document.createElement('script');
+        authScript.src = '/js/auth.js';
+        authScript.onload = () => {
+            // Inicializar Auth após o script ser carregado
+            if (window.Auth) {
+                window.Auth.init();
+            }
+        };
+        document.head.appendChild(authScript);
+    });
 
 fetch("/views/templates/footer.html")
     .then(response => response.text())
