--- a/src/main/resources/static/views/home.html
+++ b/src/main/resources/static/views/home.html
@@ -19,6 +19,10 @@
     </div>
 </div>
 <div id="map">
+    <div class="map-loading">
+        <div class="spinner"></div>
+        <p>Carregando mapa...</p>
+    </div>
 </div>
 
 <div id="resultados" style="margin-top: 20px;"></div>
