Realizado diversas mudanças, tinha esquecido de subir cada passo. Porém, relizado login ADM fixo, cadastro de usuários, logins usuários. Além de, ter implementado o Spring Security em todas as partes de criação e login. Agora falta realizar uns ajustes de visibilidade para o usuário e alguns detelhas de UX

--- a/src/main/resources/static/css/Clientes/login.css
+++ b/src/main/resources/static/css/Clientes/login.css
@@ -5,13 +5,15 @@
 }
 
 body{
+    min-height: 100vh;
+    background-color: #3f0f71;
+}
+
+.login-page{
+    min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: #3f0f71;
-    background-size: cover;
-    background-position: center;
 }
 
 .container {
